Update package.json to correct version and name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "covidsafepaths",
-  "version": "1.0.28",
+  "name": "PathCheckBT",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "clean": "rm -rf node_modules && yarn",
@@ -10,15 +10,12 @@
     "format": "yarn prettier --write",
     "lint": "eslint ./",
     "validate": "yarn prettier --list-different && yarn tsc && yarn lint",
-    "run-android-bt": "react-native run-android --variant=btDebug --appId=org.pathcheck.covidsafepathsBt",
-    "run-android-gps": "react-native run-android --variant=gpsDebug --appId=org.pathcheck.covidsafepaths",
-    "run-ios-bt": "yarn install:pod && react-native run-ios --scheme \"BT_Development\" --configuration \"Debug-BT\" --simulator \"iPhone 11 (13.5)\"",
-    "run-ios-gps": "yarn install:pod && react-native run-ios --scheme \"GPS_Development\" --configuration \"Debug-GPS\"",
+    "run-android": "react-native run-android --variant=btDebug --appId=org.pathcheck.covidsafepathsBt",
+    "run-ios": "yarn install:pod && react-native run-ios --scheme \"BT_Development\" --configuration \"Debug-BT\" --simulator \"iPhone 11 (13.5)\"",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
     "install:pod": "cd ios && bundle install --quiet && bundle exec pod install --silent",
     "postinstall": "patch-package && npx react-native-jetifier",
     "postversion": "react-native-version",
-    "set-ha": "./setup_env.sh",
     "format:all": "prettier --write ./app/**/*.js",
     "format:eula": "prettier --write ./app/locales/eula/en.html",
     "detox-setup": "detox clean-framework-cache && detox build-framework-cache",
