Update github actions
Why:
We would like for the ci to run on every PR and not every commit.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,10 @@
 name: Build
 
 on:
-  push:
-    branches:
-      - develop
-      - master
   pull_request:
     branches:
       - develop
-      - master
+      - main
 
 jobs:
   build_staging_android:
