--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -4,21 +4,21 @@ on:
   push:
     branches: [develop]
     paths:
-      - app/locales/en.json
-      - app/locales/eula/en.html
+      - src/locales/en.json
+      - src/locales/eula/en.html
       - ios/en.lproj/*.strings
       - android/app/src/main/res/values/strings.xml
       - .github/workflows/*.yml
-      - app/locales/*.sh
+      - src/locales/*.sh
   pull_request:
     branches: [develop]
     paths:
-      - app/locales/en.json
-      - app/locales/eula/en.html
+      - src/locales/en.json
+      - src/locales/eula/en.html
       - ios/en.lproj/*.strings
       - android/app/src/main/res/values/strings.xml
       - .github/workflows/*.yml
-      - app/locales/*.sh
+      - src/locales/*.sh
 
 jobs:
   # Run on PRs, checks for any added keys that are missing in the app/locales/en.json file
