--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "rm -rf node_modules && yarn",
     "start": "yarn && react-native start",
     "tsc": "tsc --noEmit",
-    "prettier": "prettier \"(e2e|app)/**/*.+(js|jsx|ts|tsx|json)\"",
+    "prettier": "prettier \"(e2e|src)/**/*.+(js|jsx|ts|tsx|json)\"",
     "format": "yarn prettier --write",
     "lint": "eslint ./",
     "validate": "yarn prettier --list-different && yarn tsc && yarn lint",
@@ -16,8 +16,8 @@
     "install:pod": "cd ios && bundle install --quiet && bundle exec pod install --silent",
     "postinstall": "patch-package && npx react-native-jetifier",
     "postversion": "react-native-version",
-    "format:all": "prettier --write ./app/**/*.js",
-    "format:eula": "prettier --write ./app/locales/eula/en.html",
+    "format:all": "prettier --write ./src/**/*.js",
+    "format:eula": "prettier --write ./src/locales/eula/en.html",
     "detox-setup": "detox clean-framework-cache && detox build-framework-cache",
     "build:e2e:android": "detox build -c android.emu.release",
     "test:e2e:android": "detox test -c android.emu.release",
@@ -25,10 +25,10 @@
     "test:e2e:iphone11": "detox test -c iphone11.sim --loglevel=warn",
     "test:e2e:iphone-se": "detox test -c iphone-se.sim --loglevel=warn",
     "test:e2e:iphone8": "detox test -c iphone8.sim --loglevel=warn",
-    "i18n:check": "./app/locales/check.sh",
+    "i18n:check": "./src/locales/check.sh",
     "i18n:extract": "i18next",
-    "i18n:pull": "./app/locales/pull.sh",
-    "i18n:push": "./app/locales/push.sh",
+    "i18n:pull": "./src/locales/pull.sh",
+    "i18n:push": "./src/locales/push.sh",
     "test": "jest --config=./jest/config.js",
     "test:watch": "jest --config=./jest/config.js --watch",
     "update-snapshots": "jest --config=./jest/config.js --updateSnapshot",
