--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,8 @@ safepaths.realm
 .env.bt*
 
 # private resources
-pathcheck-mobile-resources
+GoogleService-Info.plist
+
 
 # swift packages
 ios/COVIDSafePaths.xcworkspace/xcshareddata/swiftpm/Package.resolved
