--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,6 +69,9 @@ jobs:
       - run: pod install --repo-update
         working-directory: ./ios
 
+      - name: Setup env
+        run: ruby bin/fetch_ha_env_github.sh $ACCESS_TOKEN
+
       # TODO(https://pathcheck.atlassian.net/browse/SAF-250): remove the skip on COVIDSafePathsTests/testRendersWelcomeScreen once it's passing
       - run: |
           xcodebuild test -workspace COVIDSafePaths.xcworkspace \
