--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "run-ios": "yarn install:pod && react-native run-ios --scheme \"BT_Development\" --configuration \"Debug-BT\" --simulator \"iPhone 11 (13.5)\"",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
     "install:pod": "cd ios && bundle install --quiet && bundle exec pod install --silent",
-    "postinstall": "patch-package && npx react-native-jetifier",
+    "postinstall": "npx react-native-jetifier",
     "postversion": "react-native-version",
     "format:all": "prettier --write ./src/**/*.js",
     "format:eula": "prettier --write ./src/locales/eula/en.html",
@@ -50,26 +50,19 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
     "@react-native-community/datetimepicker": "^2.3.2",
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.4",
     "@react-native-community/push-notification-ios": "^1.4.0",
-    "@react-native-community/viewpager": "^3.3.0",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "5.5.1",
     "@react-navigation/stack": "5.1.1",
-    "@types/js-yaml": "^3.12.4",
     "array-flat-polyfill": "^1.0.1",
     "dayjs": "^1.8.24",
     "i18next": "^19.3.3",
-    "js-yaml": "^3.13.1",
-    "patch-package": "^6.2.2",
-    "pluralize": "^8.0.0",
-    "postinstall-postinstall": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-i18next": "^11.4.0",
     "react-native": "0.61.5",
-    "react-native-app-intro-slider": "^3.0.0",
     "react-native-background-fetch": "^3.0.4",
     "react-native-config": "^1.2.1",
     "react-native-fs": "^2.16.6",
@@ -77,23 +70,17 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-local-resource": "^0.1.6",
     "react-native-permissions": "^2.0.10",
-    "react-native-popup-menu": "^0.15.7",
     "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
-    "react-native-share": "^3.1.0",
     "react-native-simple-crypto": "^0.2.12",
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^12.0.3",
-    "react-native-uuid-generator": "^6.1.1",
     "react-native-webview": "^8.1.2",
     "react-native-zip-archive": "^5.0.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.19",
-    "rn-fetch-blob": "^0.12.0",
-    "typesafe-actions": "^5.1.0",
-    "valid-url": "^1.0.9",
-    "victory-native": "^34.1.0"
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
@@ -126,25 +113,16 @@
     "fishery": "^0.4.1",
     "husky": "^4.2.3",
     "i18next-parser": "tstirrat/i18next-parser#guard-plural-rule",
-    "import-sort-config": "^6.0.0",
-    "import-sort-style-module": "^6.0.0",
     "jest": "^25.1.0",
     "lint-diff": "^1.2.1",
     "lint-staged": "^10.0.9",
     "logkitty": "^0.7.1",
     "metro-react-native-babel-preset": "^0.58.0",
-    "mockdate": "^2.0.5",
     "prettier": "^2.0.5",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-version": "^4.0.0",
     "react-test-renderer": "^16.13.1",
     "reactotron-react-native": "^5.0.0",
     "typescript": "^3.9.3"
-  },
-  "importSort": {
-    ".js, .jsx, .es6, .es, .mjs, .ts, .tsx": {
-      "style": "module"
-    }
   },
   "detox": {
     "artifacts": {
