--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,14 +60,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
+      - name: Setup env
+        run: ruby bin/fetch_ha_env_github.sh $ACCESS_TOKEN
+        working-directory: ./
+
       - name: Install ruby gems (including Cocoapods)
         run: |
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
         working-directory: ./ios
-
-      - name: Setup env
-        run: ruby bin/fetch_ha_env_github.sh $ACCESS_TOKEN
 
       - run: pod install --repo-update
         working-directory: ./ios
