Ignore if only changes made to android folder.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: macOS-latest
     needs: unit-test
     timeout-minutes: 25
+    ignore-paths:
+      - 'android/**'
     steps:
       - uses: actions/checkout@master
 
