--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -224,29 +224,29 @@ android {
 
 dependencies {
     // loading html files
-    compile project(':react-native-local-resource')
+    implementation project(':react-native-local-resource')
     implementation project(':react-native-reanimated')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.annotation:annotation:1.1.0"
     implementation 'com.bottlerocketstudios:vault:1.4.2'
-    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // Imports to support Exposure Notifications implementation based on Google sample
     // Annotation processing
-    kapt 'com.google.auto.value:auto-value:1.7'
+    kapt 'com.google.auto.value:auto-value:1.7.3'
     // Libraries
-    btImplementation 'androidx.work:work-runtime:2.3.4'
+    btImplementation 'androidx.work:work-runtime:2.4.0'
     btImplementation 'androidx.concurrent:concurrent-futures:1.0.0'
-    btImplementation 'com.google.android.gms:play-services-base:17.2.1'
-    btImplementation 'com.google.android.gms:play-services-basement:17.2.1'
-    btImplementation 'com.google.android.gms:play-services-tasks:17.0.2'
+    btImplementation 'com.google.android.gms:play-services-base:17.3.0'
+    btImplementation 'com.google.android.gms:play-services-basement:17.3.0'
+    btImplementation 'com.google.android.gms:play-services-tasks:17.1.0'
     btImplementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
     btImplementation 'com.google.guava:guava:29.0-android'
-    btImplementation 'com.google.auto.value:auto-value-annotations:1.7'
+    btImplementation 'com.google.auto.value:auto-value-annotations:1.7.3'
     btImplementation 'com.android.volley:volley:1.1.1'
-    btImplementation 'commons-io:commons-io:2.5'
+    btImplementation 'commons-io:commons-io:2.6'
     // Google EN library not available via Maven
     btImplementation project(path: ':play-services-nearby-18.0.3-eap')
     // Stetho for debugging Realm
@@ -265,7 +265,7 @@ dependencies {
     implementation 'org.bouncycastle:bcprov-jdk15on:1.65'
 
     androidTestImplementation('com.wix:detox:+') // detox: e2e testing
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.3.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
