--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native": "0.61.5",
     "react-native-background-fetch": "^3.0.4",
     "react-native-config": "^1.2.1",
+    "react-native-device-info": "^5.6.3",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
