Installed Firebase Crashlytics SDK, and also Firebase Analytics, which is needed for Crashlytics

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "yarn prettier --write",
     "lint": "eslint ./",
     "validate": "yarn prettier --list-different && yarn tsc && yarn lint",
-    "run-android": "react-native run-android --variant=btDebug --appId=org.pathcheck.covidsafepathsBt",
+    "run-android": "react-native run-android --variant=btDebug --appId=org.pathcheck.covidsafepaths",
     "run-ios": "yarn install:pod && react-native run-ios --scheme \"BT_Development\" --configuration \"Debug-BT\" --simulator \"iPhone 11 (13.5)\"",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
     "install:pod": "cd ios && bundle install --quiet && bundle exec pod install --silent",
@@ -45,6 +45,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.4",
     "@react-native-community/push-notification-ios": "^1.4.0",
+    "@react-native-firebase/app": "^8.2.0",
+    "@react-native-firebase/crashlytics": "^8.1.2",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "5.5.1",
     "@react-navigation/stack": "5.1.1",
