--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
@@ -197,13 +199,14 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
             matchingFallbacks = ['release']
+
         }
     }
 
     flavorDimensions "version"
     productFlavors {
         bt {
-            applicationId 'org.pathcheck.covidsafepathsBt'
+            applicationId 'org.pathcheck.covidsafepaths'
             dimension "version"
         }
     }
@@ -225,6 +228,8 @@ dependencies {
     implementation 'com.bottlerocketstudios:vault:1.4.2'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
 
     // Imports to support Exposure Notifications implementation based on Google sample
     // Annotation processing
@@ -264,6 +269,7 @@ dependencies {
 
 allprojects {
     repositories {
+        google()
         configurations.all {
             // To fix the app start crash error
             resolutionStrategy.eachDependency { DependencyResolveDetails details ->
@@ -274,7 +280,7 @@ allprojects {
                 }
                 if (requested.group == 'com.google.firebase') {
                     // TODO verify no downstream issues with version bump
-                    details.useVersion '17+'
+                    //details.useVersion '17+'
                 }
             }
         }
