--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -225,6 +225,7 @@ dependencies {
     implementation 'com.bottlerocketstudios:vault:1.4.2'
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     // Imports to support Exposure Notifications implementation based on Google sample
     // Annotation processing
