--- a/.github/workflows/i18n.yml
+++ b/.github/workflows/i18n.yml
@@ -25,7 +25,7 @@ jobs:
   check-i18n:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
 
       - name: cached node_modules/
         uses: actions/cache@v1
