--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -141,7 +141,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.pathcheck.covidsafepathsBt"
+        applicationId "org.pathcheck.covidsafepaths"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         multiDexEnabled true
@@ -203,7 +203,7 @@ android {
     flavorDimensions "version"
     productFlavors {
         bt {
-            applicationId "org.pathcheck.covidsafepaths"
+            applicationId 'org.pathcheck.covidsafepathsBt'
             dimension "version"
         }
     }
