--- a/android/app/src/bt/AndroidManifest.xml
+++ b/android/app/src/bt/AndroidManifest.xml
@@ -33,9 +33,8 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.exposurenotification.ACTION_EXPOSURE_STATE_UPDATED" />
+                <action android:name="com.google.android.gms.exposurenotification.ACTION_EXPOSURE_NOT_FOUND" />
             </intent-filter>
         </receiver>
     </application>
-
-
 </manifest>
