--- a/android/app/src/bt/AndroidManifest.xml
+++ b/android/app/src/bt/AndroidManifest.xml
@@ -28,14 +28,13 @@
         </activity>
 
         <receiver
-            android:name="covidsafepaths.bt.exposurenotifications.ExposureNotificationBroadcastReceiver"
+            android:name="covidsafepaths.bt.exposurenotifications.nearby.ExposureNotificationBroadcastReceiver"
             android:permission="com.google.android.gms.nearby.exposurenotification.EXPOSURE_CALLBACK"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.exposurenotification.ACTION_EXPOSURE_STATE_UPDATED" />
+                <action android:name="com.google.android.gms.exposurenotification.ACTION_EXPOSURE_NOT_FOUND" />
             </intent-filter>
         </receiver>
     </application>
-
-
 </manifest>
