--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "yarn prettier --write",
     "lint": "eslint ./",
     "validate": "yarn prettier --list-different && yarn tsc && yarn lint",
-    "run-android": "react-native run-android --variant=btDebug --appId=org.pathcheck.covidsafepaths",
+    "run-android": "react-native run-android --variant=btDebug --appId=org.pathcheck.covidsafepaths.bt",
     "run-ios": "yarn install:pod && react-native run-ios --scheme \"BT_Development\" --configuration \"Debug-BT\" --simulator \"iPhone 11 (13.5)\"",
     "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
     "install:pod": "cd ios && bundle install --quiet && bundle exec pod install --silent",
