--- a/.github/workflows/lokalise.yml
+++ b/.github/workflows/lokalise.yml
@@ -8,6 +8,7 @@ on:
       - src/locales/eula/en.html
       - ios/en.lproj/*.strings
       - android/app/src/main/res/values/strings.xml
+      - android/app/src/bt/res/values/strings.xml
       - .github/workflows/*.yml
       - src/locales/*.sh
 
