Remove Staging Variant (#112)
* Remove staging variant as it is no longer used.

* Switch to debug build.

* Rename job to debug.

* Update path.

Co-authored-by: Dick Lucas <dick@fullsend.io>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  build_staging_android:
+  build_debug_android:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -65,15 +65,15 @@ jobs:
       - name: Setup env
         run: ./bin/set_ha_env_github.sh
 
-      - name: Build android Staging artifact
+      - name: Build android Debug artifact
         uses: maierj/fastlane-action@v1.4.0
         with:
-          lane: 'staging_bt'
+          lane: 'debug_bt'
           subdirectory: 'android'
           bundle-install-path: 'vendor/bundle'
 
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
-          name: app-bt-staging
-          path: android/app/build/outputs/apk/bt/staging/app-bt-staging.apk
+          name: app-bt-debug
+          path: android/app/build/outputs/apk/bt/debug/app-bt-debug.apk
