changes for Crashlytics

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -60,7 +60,9 @@ def bt_pods
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Alamofire', '~> 4.9.1'
   pod 'ZIPFoundation'
+  pod 'Firebase/Analytics'
   pod 'Firebase/Crashlytics'
+  pod 'RNFBCrashlytics', :path => '../node_modules/@react-native-firebase/crashlytics'
 end
 
 target 'BT' do
