Firebase Analytics and Crashlytics

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
+apply plugin: 'com.google.gms.google-services'  // Google Services plugin
+apply plugin: 'com.google.firebase.crashlytics'
 
 project.ext.envConfigFiles = [
     btdebug: ".env.bt",
@@ -141,7 +143,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.pathcheck.covidsafepaths"
+        applicationId "org.pathcheck.covidsafepaths.bt"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         multiDexEnabled true
@@ -203,7 +205,7 @@ android {
     flavorDimensions "version"
     productFlavors {
         bt {
-            applicationId 'org.pathcheck.covidsafepathsBt'
+            applicationId 'org.pathcheck.covidsafepaths.bt'
             dimension "version"
         }
     }
@@ -260,6 +262,8 @@ dependencies {
     androidTestImplementation('com.wix:detox:+') // detox: e2e testing
     implementation "androidx.core:core-ktx:1.3.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+    implementation 'com.google.firebase:firebase-crashlytics:17.1.1'
 }
 
 allprojects {
@@ -269,10 +273,6 @@ allprojects {
             resolutionStrategy.eachDependency { DependencyResolveDetails details ->
                 def requested = details.requested
                 if (requested.group == 'com.google.android.gms') {
-                    // TODO verify no downstream issues with version bump
-                    details.useVersion '17+'
-                }
-                if (requested.group == 'com.google.firebase') {
                     // TODO verify no downstream issues with version bump
                     details.useVersion '17+'
                 }
