--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,11 @@ buildscript {
 
         classpath "io.realm:realm-gradle-plugin:6.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Google Services plugin
+        classpath 'com.google.gms:google-services:4.3.3'
+        // Add the Crashlytics Gradle plugin.
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
