--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ safepaths.realm
 ios/COVIDSafePaths.xcworkspace/xcshareddata/swiftpm/Package.resolved
 
 # Firebase
-android/app/google-services.json
+android/app/google-services.json.real
+android/app/google-services.json.mock
 # test coverage
 test-coverage
