--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,10 +52,10 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn --frozen-lockfile
 
-      - name: Set up Ruby 2.7
-        uses: actions/setup-ruby@v1
+      - name: Set up Ruby 2.6
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 2.6.5
 
       - name: Cache ruby gems
         uses: actions/cache@v1
