--- a/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Production.xcscheme
+++ b/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Production.xcscheme
@@ -99,6 +99,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release-BT"
+      customArchiveName = "BT"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
