--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "i18n:pull": "./src/locales/pull.sh",
     "i18n:push": "./src/locales/push.sh",
     "test": "jest --config=./jest/config.js",
-    "test:watch": "jest --config=./jest/config.js --watch"
+    "test:watch": "jest --config=./jest/config.js --watch",
+    "assemble-android-debug": "react-native bundle --platform android --dev true --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android && ./gradlew assembleDebug"
   },
   "husky": {
     "hooks": {
