Refactor ExposureManager to enable testability - Adds code coverage - Adds Unit Test for lifecycle and status of the manager - Start refactoring signatures to decouple RN from ExposureManager

--- a/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Development.xcscheme
+++ b/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Development.xcscheme
@@ -44,7 +44,18 @@
       buildConfiguration = "Debug-BT"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C53FD07D24719AD1006D3268"
+            BuildableName = "BT.app"
+            BlueprintName = "BT"
+            ReferencedContainer = "container:COVIDSafePaths.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
