--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -228,7 +228,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'commons-io:commons-io:2.6'
     // Google EN library not available via Maven
-    implementation project(path: ':play-services-nearby-18.0.3-eap')
+    implementation project(path: ':play-services-nearby')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/"
