--- a/ios/Podfile
+++ b/ios/Podfile
@@ -20,7 +20,8 @@ def pods
   pod 'Realm', :modular_headers => true
   pod 'RealmSwift', :modular_headers => true
   pod 'Alamofire', '~> 4.9.1'
-  pod 'ZIPFoundation'
+  pod 'KeychainAccess', '~> 4.2.0'
+  pod 'ZIPFoundation', '~> 0.9.11'
 end
 
 target 'BT' do
