--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,5 @@
+platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-require_relative '../node_modules/react-native/scripts/react_native_pods'
-
-platform :ios, '10.0'
 
 project 'COVIDSafePaths.xcodeproj',
 'Debug-BT' => :debug,
@@ -11,7 +9,41 @@ project 'COVIDSafePaths.xcodeproj',
 'Staging-BT' => :release,
 'Staging-GPS' => :release
 
-def pods
+def shared_pods
+  # Pods for COVIDSafePaths
+
+  pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
+  pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
+  pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
+  pod 'RCTTypeSafety', :path => "../node_modules/react-native/Libraries/TypeSafety"
+
+  pod 'React', :path => '../node_modules/react-native/'
+  pod 'React-Core', :path => '../node_modules/react-native/'
+  pod 'React-CoreModules', :path => '../node_modules/react-native/React/CoreModules'
+  pod 'React-Core/DevSupport', :path => '../node_modules/react-native/'
+  pod 'React-RCTActionSheet', :path => '../node_modules/react-native/Libraries/ActionSheetIOS'
+  pod 'React-RCTAnimation', :path => '../node_modules/react-native/Libraries/NativeAnimation'
+  pod 'React-RCTBlob', :path => '../node_modules/react-native/Libraries/Blob'
+  pod 'React-RCTImage', :path => '../node_modules/react-native/Libraries/Image'
+  pod 'React-RCTLinking', :path => '../node_modules/react-native/Libraries/LinkingIOS'
+  pod 'React-RCTNetwork', :path => '../node_modules/react-native/Libraries/Network'
+  pod 'React-RCTSettings', :path => '../node_modules/react-native/Libraries/Settings'
+  pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text'
+  pod 'React-RCTVibration', :path => '../node_modules/react-native/Libraries/Vibration'
+  pod 'React-Core/RCTWebSocket', :path => '../node_modules/react-native/'
+
+  pod 'React-cxxreact', :path => '../node_modules/react-native/ReactCommon/cxxreact'
+  pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi'
+  pod 'React-jsiexecutor', :path => '../node_modules/react-native/ReactCommon/jsiexecutor'
+  pod 'React-jsinspector', :path => '../node_modules/react-native/ReactCommon/jsinspector'
+  pod 'ReactCommon/callinvoker', :path => "../node_modules/react-native/ReactCommon"
+  pod 'ReactCommon/turbomodule/core', :path => "../node_modules/react-native/ReactCommon"
+  pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga', :modular_headers => true
+
+  pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
+  pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
+
   pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
 
   permissions_path = '../node_modules/react-native-permissions/ios'
@@ -19,19 +51,24 @@ def pods
 
   pod 'Realm', :modular_headers => true
   pod 'RealmSwift', :modular_headers => true
+
+  use_native_modules!
+end
+
+def bt_pods
+  ### These should be removed in a future commit
+  permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Alamofire', '~> 4.9.1'
   pod 'ZIPFoundation'
 end
 
 target 'BT' do
-  config = use_native_modules!
-  use_react_native!(:path => config["reactNativePath"])
-
-  pods
-
-  target 'BTTests' do
-    inherit! :search_paths
-    pods
-  end
+  bt_pods
+  shared_pods
 end
 
+target 'BTTests' do
+  inherit! :search_paths
+  bt_pods
+  shared_pods
+end
