--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -199,11 +199,6 @@ android {
             setProperty("archivesBaseName", project.archivesBaseName.concat(outputSuffix))
         }
     }
-
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError false
-    }
 }
 
 dependencies {
@@ -211,6 +206,7 @@ dependencies {
     // loading html files
     implementation project(':react-native-local-resource')
     implementation project(':react-native-reanimated')
+    //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.annotation:annotation:1.1.0"
     implementation 'com.bottlerocketstudios:vault:1.4.2'
@@ -221,10 +217,10 @@ dependencies {
     kapt 'com.google.auto.value:auto-value:1.7.3'
     // Libraries
     implementation 'androidx.work:work-runtime:2.4.0'
-    implementation 'androidx.concurrent:concurrent-futures:1.0.0'
-    implementation 'com.google.android.gms:play-services-base:17.3.0'
-    implementation 'com.google.android.gms:play-services-basement:17.3.0'
-    implementation 'com.google.android.gms:play-services-tasks:17.1.0'
+    implementation 'androidx.concurrent:concurrent-futures:1.1.0'
+    implementation 'com.google.android.gms:play-services-base:17.4.0'
+    implementation 'com.google.android.gms:play-services-basement:17.4.0'
+    implementation 'com.google.android.gms:play-services-tasks:17.2.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
     implementation 'com.google.guava:guava:29.0-android'
     implementation 'com.google.auto.value:auto-value-annotations:1.7.3'
@@ -239,6 +235,7 @@ dependencies {
         implementation jscFlavor
     }
 
+    //noinspection GradleDynamicVersion
     androidTestImplementation('com.wix:detox:+') // detox: e2e testing
     implementation "androidx.core:core-ktx:1.3.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
