--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,6 +10,7 @@ project.ext.envConfigFiles = [
 ]
 
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+apply plugin: "org.jlleitschuh.gradle.ktlint"
 
 apply from: "../../node_modules/@bugsnag/react-native/bugsnag-react-native.gradle"
 
@@ -199,6 +200,10 @@ android {
             setProperty("archivesBaseName", project.archivesBaseName.concat(outputSuffix))
         }
     }
+}
+
+ktlint {
+    android.set(true)
 }
 
 dependencies {
