--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.0.1")
@@ -24,6 +25,7 @@ buildscript {
         classpath "io.realm:realm-gradle-plugin:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        classpath("org.jlleitschuh.gradle:ktlint-gradle:9.3.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
