--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,7 @@ project.ext.envConfigFiles = [
 
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 apply plugin: "org.jlleitschuh.gradle.ktlint"
+apply plugin: "checkstyle"
 
 apply from: "../../node_modules/@bugsnag/react-native/bugsnag-react-native.gradle"
 
@@ -251,6 +252,20 @@ dependencies {
 task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
+}
+
+checkstyle {
+//    config = rootProject.resources.text.fromFile('buildConfig/checkstyle/checkstyle.xml')
+    toolVersion '8.35'
+}
+
+task checkstyle(type: Checkstyle) {
+    configFile rootProject.file("app/checkstyle.xml")
+    source 'src'
+    include '**/*.java'
+    exclude '**/gen/**'
+
+    classpath = files()
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
