Introduce staging configuration (#259)
### Why
We'd like to suppress the debug menu for release builds, and also ensure that builds are not pointed to the release environment during testing

### This Commit
This commit introduces a `STAGING` env configuration that suppresses the debug menu and points to the dev server, as well as an `Adhoc` scheme for `iOS` that uses the `.env.bt` configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'realm-android'
 
 project.ext.envConfigFiles = [
     debug: ".env.bt",
+    staging: ".env.bt.staging",
     release: ".env.bt.release",
 ]
 
@@ -91,6 +92,8 @@ apply from: "../../node_modules/@bugsnag/react-native/bugsnag-react-native.gradl
 project.ext.react = [
     entryFile: "index.js",
     bundleInDebug: false,
+    bundleInStaging: true,
+    devDisabledInStaging: true,
     enableHermes: false,  // clean and rebuild if changing
 ]
 
@@ -200,6 +203,10 @@ android {
             def outputSuffix = project.hasProperty('outputSuffix') ? '-' + project.outputSuffix : ''
             setProperty("archivesBaseName", project.archivesBaseName.concat(outputSuffix))
         }
+        staging {
+            // Same gradle configuration as release, it will use a different env file
+            initWith release
+        }
     }
 }
 
@@ -236,6 +243,7 @@ dependencies {
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/"
         debugImplementation files(hermesPath + "hermes-debug.aar")
+        stagingImplementation files(hermesPath + "hermes-release.aar")
         releaseImplementation files(hermesPath + "hermes-release.aar")
     } else {
         implementation jscFlavor
