--- a/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Staging.xcscheme
+++ b/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Staging.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;.env.bt.release&quot; &gt; /tmp/envfile   # use .env.bt.release&#10;">
+               scriptText = "echo &quot;.env.bt.staging&quot; &gt; /tmp/envfile   # use .env.bt.staging&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
@@ -41,7 +41,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Release-BT"
+      buildConfiguration = "Release-GPS"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
