--- a/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Adhoc.xcscheme
+++ b/ios/COVIDSafePaths.xcodeproj/xcshareddata/xcschemes/BT_Adhoc.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;.env.bt.release&quot; &gt; /tmp/envfile   # use .env.bt.release&#10;">
+               scriptText = "echo &quot;.env.bt&quot; &gt; /tmp/envfile   # use .env&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
